Added "Terratec Cinergy 400 Mobile". Updated "K-Win V-Stream Studio TV Terminator".

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.13 2005-03-06 13:15:06 to_see Exp $
+; $Id: SAA713xCards.ini,v 1.14 2005-03-13 04:48:40 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1028,37 +1028,30 @@ Final ()
 
 [K-Win V-Stream Studio TV Terminator]
 ;Thanks "Alex Perez" <aperez@st...>
-;This card uses the unsupported SAA7133 chip.
-;This card has a "Cable Tuner" and an "Off-Air Tuner" but
-;regspy logs did not show a difference between the two.
+;Thanks Petya Petrova <petya_84bg@ya...>
 ;This card may use VideoPort, and various TS I/O.
-;There's no Silicon Philips TDA8275 in DScaler.
 DeviceID = 0x7133
-DefaultTuner = ;"Silicon Philips TDA8275"
+DefaultTuner = philips_tda8275
+AudioCrystal = 32MHz
 GPIOMask = 0x0038e700
 
-Input ( "Cable Tuner", tuner )
+Input ( "Tuner", tuner )
 	VideoPin = 1
-	AudioPin = line1
-	GPIOSet( 0x008000, 0x30E000 )
-
-Input ( "Off-Air Tuner", tuner )
-	VideoPin = 1
-	AudioPin = line1
+	AudioPin = dac
 	GPIOSet( 0x008000, 0x30E000 )
 
 Input ( "Composite", composite )
 	VideoPin = 3
-	AudioPin = line1
+	AudioPin = line1 ; guessed
 	GPIOSet( 0x008000, 0x30E000 )
 
 Input ( "S-Video", svideo )
 	VideoPin = 0
-	AudioPin = line1
+	AudioPin = line1 ; guessed
 	GPIOSet( 0x008000, 0x30E000 )
 
 Input ( "Radio", radio )
-	AudioPin = line1
+	AudioPin = line2 ; guessed
 	GPIOSet( 0x208000, 0x30E000 )
 
 Final ()
@@ -1173,15 +1166,8 @@ Input ( "S-Video", svideo )
 ; which is used by the non-II "Gold Plus" card also in this file.
 ; It is the GPIO lines that are commented out.
 ;
-; Ruslan reports that he cannot tune with his card using the "Gold
-; Plus" settings in DScaler.  His investigation found that the
-; tuner type on his card is an LG TPI8PSB02P.  (Various messages
-; boards suggest few valid substitutes for this tuner including
-; philips_pal.)
-;
-; Elshin reports that his card works in Linux using lg_tapcnew_pal.
-; The GPIO settings provided in the RegSpy logs he sent in are those
-; that are currently used.  They are untested.
+; This card has a TEA5767 chip at I2C address 0x60 (0xC0) which is
+; not the tuner.
 ;
 ; Note that this card has the same auto detect ID as the non-II
 ; version of this card by the same manufacturer.
@@ -1311,6 +1297,35 @@ Input ( "Radio", radio )
 
 Final ()
 	GPIOSet( 0x000, 0x700 )
+
+
+[Terratec Cinergy 400 Mobile]
+;Thanks "Kurt Edegger" <news_tmp1@ed...>
+; This card does not have a loopback cable and relies
+; on DMA for audio which is not supported.
+DeviceID = 0x7133
+DefaultTuner = alps_tsbe5_pal
+AudioCrystal = 32MHz
+GPIOMask = 0x001ce700
+AutoDetectID = 0x1162153b
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+	GPIOSet( 0x002000, 0x1ce700 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x042000, 0x1ce700 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 1 ; 1 for mode 9
+	AudioPin = line1
+	GPIOSet( 0x042000, 0x1ce700 )
+
+Final ()
+	GPIOSet( 0x042000, 0x1ce700 )
 
 
 ; ***** Tuner list: (as at March 2005) *****
