EPG code improved => possibility to set the EPG channel name in the channel setup dialog box => automatic loading of new data when needed => OSD scrrens updated => first step for programs "browser"

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -253,18 +253,18 @@ BEGIN
     LTEXT           "",IDC_AUDIO_DECODER_TYPE,66,70,125,10,NOT WS_VISIBLE
 END
 
-IDD_CHANNELLIST DIALOGEX 22, 17, 357, 241
+IDD_CHANNELLIST DIALOGEX 22, 17, 357, 254
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    GROUPBOX        "Channel List",IDC_STATIC,5,0,115,215,BS_LEFT,
+    GROUPBOX        "Channel List",IDC_STATIC,5,0,115,228,BS_LEFT,
                     WS_EX_TRANSPARENT
-    LISTBOX         IDC_PROGRAMLIST,10,10,105,182,LBS_NOINTEGRALHEIGHT | 
+    LISTBOX         IDC_PROGRAMLIST,10,10,105,190,LBS_NOINTEGRALHEIGHT | 
                     LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Clear List",IDC_CLEAR,10,196,50,13,WS_GROUP
+    PUSHBUTTON      "Clear List",IDC_CLEAR,10,207,50,13,WS_GROUP
     CONTROL         "Mute",IDC_CHANNEL_MUTE,"Button",BS_AUTOCHECKBOX | 
-                    BS_RIGHT | WS_TABSTOP,70,196,45,15,WS_EX_RIGHT
+                    BS_RIGHT | WS_TABSTOP,70,207,45,15,WS_EX_RIGHT
     GROUPBOX        "Setup",IDC_STATIC,130,0,220,50,0,WS_EX_TRANSPARENT
     CONTROL         "Keyed numbers are channels, not positions (US Style)",
                     IDC_CUSTOMCHANNELORDER,"Button",BS_AUTOCHECKBOX | 
@@ -283,29 +283,31 @@ BEGIN
     LTEXT           "Hz",IDC_STATIC,220,95,13,15,SS_CENTERIMAGE
     CONTROL         "Use AFC",IDC_SCAN_AFC,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,235,95,45,15
-    GROUPBOX        "Details",IDC_STATIC,130,120,220,115
+    GROUPBOX        "Details",IDC_STATIC,130,118,220,130
     LTEXT           "Name",IDC_STATIC,140,130,30,15,SS_CENTERIMAGE
     EDITTEXT        IDC_NAME,180,130,161,12,ES_AUTOHSCROLL
-    LTEXT           "Frequency",IDC_STATIC,140,150,35,10,SS_CENTERIMAGE
-    EDITTEXT        IDC_FREQUENCY,180,150,44,12,ES_AUTOHSCROLL
-    LTEXT           "MHz",IDC_STATIC,230,150,25,15,SS_CENTERIMAGE
-    PUSHBUTTON      "Set",IDC_SETFREQ,260,150,45,13
-    SCROLLBAR       IDC_FINETUNE,315,150,22,13
-    LTEXT           "Channel",IDC_STATIC,140,170,29,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_CHANNEL,180,170,41,107,CBS_DROPDOWNLIST | WS_VSCROLL | 
+    LTEXT           "Frequency",IDC_STATIC,139,169,35,10,SS_CENTERIMAGE
+    EDITTEXT        IDC_FREQUENCY,179,169,44,12,ES_AUTOHSCROLL
+    LTEXT           "MHz",IDC_STATIC,229,169,25,15,SS_CENTERIMAGE
+    PUSHBUTTON      "Set",IDC_SETFREQ,259,169,45,13
+    SCROLLBAR       IDC_FINETUNE,315,169,22,13
+    LTEXT           "Channel",IDC_STATIC,139,188,29,12,SS_CENTERIMAGE
+    COMBOBOX        IDC_CHANNEL,179,188,41,107,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     CONTROL         "Active",IDC_ACTIVE,"Button",BS_AUTOCHECKBOX | BS_LEFT | 
-                    BS_VCENTER | WS_TABSTOP,260,169,45,12
-    LTEXT           "Format",IDC_STATIC,140,190,34,11,SS_CENTERIMAGE
-    COMBOBOX        IDC_FORMAT,180,190,160,60,CBS_DROPDOWNLIST | WS_VSCROLL | 
+                    BS_VCENTER | WS_TABSTOP,259,188,45,12
+    LTEXT           "Format",IDC_STATIC,139,209,34,11,SS_CENTERIMAGE
+    COMBOBOX        IDC_FORMAT,179,209,160,60,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
-    PUSHBUTTON      "Copy",IDC_ADD,141,215,45,12
-    PUSHBUTTON      "Remove",IDC_REMOVE,191,215,45,12
-    PUSHBUTTON      "Up",IDC_UP,250,215,45,12
-    PUSHBUTTON      "Down",IDC_DOWN,300,215,45,12
-    DEFPUSHBUTTON   "OK",IDOK,5,220,35,14,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,45,220,35,14,WS_GROUP
-    PUSHBUTTON      "&Help",IDC_HELPBTN,85,220,35,14,WS_GROUP
+    PUSHBUTTON      "Copy",IDC_ADD,141,231,45,12
+    PUSHBUTTON      "Remove",IDC_REMOVE,191,231,45,12
+    PUSHBUTTON      "Up",IDC_UP,250,231,45,12
+    PUSHBUTTON      "Down",IDC_DOWN,300,231,45,12
+    DEFPUSHBUTTON   "OK",IDOK,6,233,35,14,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,46,233,35,14,WS_GROUP
+    PUSHBUTTON      "&Help",IDC_HELPBTN,86,233,35,14,WS_GROUP
+    LTEXT           "EPG Name",IDC_STATIC,139,149,36,15,SS_CENTERIMAGE
+    EDITTEXT        IDC_EPGNAME,179,149,161,12,ES_AUTOHSCROLL
 END
 
 IDD_SPLASHBOX DIALOGEX 0, 0, 145, 192
@@ -1420,9 +1422,19 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "EPG"
         BEGIN
-            MENUITEM "Scan EPG File (XMLTV)",       IDM_SCAN_EPG
-            MENUITEM "Load EPG Data",               IDM_LOAD_EPG
-            MENUITEM "Display EPG Data",            IDM_DISPLAY_EPG
+            MENUITEM "&Import XMLTV File",          IDM_SCAN_EPG
+            MENUITEM "&Load EPG Data",              IDM_LOAD_EPG
+            MENUITEM "&View Program Info",          IDM_DISPLAY_EPG
+            POPUP "&Browse Programs"
+            BEGIN
+                MENUITEM "No&w",                        IDM_DISPLAY_EPG_NOW
+                MENUITEM "&Earlier",                    IDM_DISPLAY_EPG_EARLIER
+
+                MENUITEM "&Later",                      IDM_DISPLAY_EPG_LATER
+
+                MENUITEM "&Previous Page",              IDM_DISPLAY_EPG_PREV
+                MENUITEM "&Next Page",                  IDM_DISPLAY_EPG_NEXT
+            END
         END
     END
     POPUP "&Datacasting"
