--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -718,14 +718,14 @@ BEGIN
                     IDC_STATIC,105,4,252,26
 END
 
-IDD_TREESETTING DIALOG DISCARDABLE  0, 0, 417, 255
+IDD_TREESETTING DIALOG DISCARDABLE  0, 0, 418, 265
 STYLE DS_CONTEXTHELP | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Dialog"
 FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Tree1",IDC_TREESETTINGS_TREE,"SysTreeView32",
                     TVS_HASBUTTONS | TVS_HASLINES | TVS_SHOWSELALWAYS | 
-                    TVS_TRACKSELECT | WS_BORDER | WS_TABSTOP,5,5,125,226
+                    TVS_TRACKSELECT | WS_BORDER | WS_TABSTOP,5,5,125,228
     CONTROL         "",IDC_TREESETTINGS_PAGEFRAME,"Static",SS_BLACKFRAME | 
                     NOT WS_VISIBLE,133,25,282,205
     PUSHBUTTON      "OK",IDOK,249,238,50,14
@@ -2053,6 +2053,12 @@ BEGIN
         RIGHTMARGIN, 367
         TOPMARGIN, 4
         BOTTOMMARGIN, 197
+    END
+
+    IDD_TREESETTING, DIALOG
+    BEGIN
+        RIGHTMARGIN, 417
+        BOTTOMMARGIN, 255
     END
 
     IDD_HWSETUP, DIALOG
