Navigation into EPG + change of channel

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -147,7 +147,7 @@ BEGIN
     VK_DELETE,      IDM_SLEEPMODE,          VIRTKEY, NOINVERT
     VK_DOWN,        IDM_VT_PAGE_DOWN,       VIRTKEY, NOINVERT
     VK_DOWN,        IDM_PREVIEW_PAGE_NEXT,  VIRTKEY, CONTROL, NOINVERT
-    VK_DOWN,        IDM_DISPLAY_EPG_NEXT,   VIRTKEY, SHIFT, NOINVERT
+    VK_DOWN,        IDM_DISPLAY_EPG_NEXT_IN_PAGE, VIRTKEY, SHIFT, NOINVERT
     VK_END,         IDM_PLAYLIST_LAST,      VIRTKEY, CONTROL, NOINVERT
     VK_ESCAPE,      IDM_RETURN_TO_WINDOW,   VIRTKEY, NOINVERT
     VK_F1,          IDM_HELP_README,        VIRTKEY, NOINVERT
@@ -194,14 +194,17 @@ BEGIN
                                                     NOINVERT
     VK_NEXT,        IDM_CHANNELMINUS,       VIRTKEY, NOINVERT
     VK_NEXT,        IDM_PLAYLIST_NEXT,      VIRTKEY, CONTROL, NOINVERT
+    VK_NEXT,        IDM_DISPLAY_EPG_NEXT,   VIRTKEY, SHIFT, NOINVERT
     VK_NUMPAD2,     IDM_WINPOS_VERT_BOTTOM, VIRTKEY, CONTROL, NOINVERT
     VK_NUMPAD5,     IDM_WINPOS_VERT_CENTRE, VIRTKEY, CONTROL, NOINVERT
     VK_NUMPAD8,     IDM_WINPOS_VERT_TOP,    VIRTKEY, CONTROL, NOINVERT
     VK_PRIOR,       IDM_CHANNELPLUS,        VIRTKEY, NOINVERT
     VK_PRIOR,       IDM_PLAYLIST_PREVIOUS,  VIRTKEY, CONTROL, NOINVERT
+    VK_PRIOR,       IDM_DISPLAY_EPG_PREV,   VIRTKEY, SHIFT, NOINVERT
     VK_RETURN,      IDM_SHOW_OSD,           VIRTKEY, NOINVERT
     VK_RETURN,      IDM_TOGGLECURSOR,       VIRTKEY, CONTROL, NOINVERT
     VK_RETURN,      IDM_FULL_SCREEN,        VIRTKEY, ALT, NOINVERT
+    VK_RETURN,      IDM_EPG_VIEW_PROG,      VIRTKEY, SHIFT, NOINVERT
     VK_RIGHT,       IDM_VT_PAGE_PLUS,       VIRTKEY, NOINVERT
     VK_RIGHT,       IDM_RIGHT_CROP_PLUS,    VIRTKEY, CONTROL, NOINVERT
     VK_RIGHT,       IDM_LEFT_CROP_MINUS,    VIRTKEY, SHIFT, NOINVERT
@@ -216,7 +219,7 @@ BEGIN
     VK_TAB,         IDM_TOGGLE_MENU,        VIRTKEY, NOINVERT
     VK_UP,          IDM_VT_PAGE_UP,         VIRTKEY, NOINVERT
     VK_UP,          IDM_PREVIEW_PAGE_PREV,  VIRTKEY, CONTROL, NOINVERT
-    VK_UP,          IDM_DISPLAY_EPG_PREV,   VIRTKEY, SHIFT, NOINVERT
+    VK_UP,          IDM_DISPLAY_EPG_PREV_IN_PAGE, VIRTKEY, SHIFT, NOINVERT
     "W",            IDM_PIXELWIDTH_MINUS,   VIRTKEY, NOINVERT
     "W",            IDM_PIXELWIDTH_PLUS,    VIRTKEY, SHIFT, NOINVERT
     "W",            IDM_PIXELWIDTH_CURRENT, VIRTKEY, SHIFT, CONTROL, 
@@ -1430,7 +1433,7 @@ BEGIN
         POPUP "EPG"
         BEGIN
             MENUITEM "&Import XMLTV File",          IDM_SCAN_EPG
-            MENUITEM "&Load EPG Data",              IDM_LOAD_EPG
+            MENUITEM "L&oad EPG Data",              IDM_LOAD_EPG
             MENUITEM SEPARATOR
             MENUITEM "View Program &Details\tCtrl+Shift+G", IDM_DISPLAY_EPG
             MENUITEM "View &Current Programs\tG",   IDM_DISPLAY_EPG_NOW
@@ -1439,8 +1442,14 @@ BEGIN
             MENUITEM "Shift Time Frame &Later\tShift+G", 
                                                     IDM_DISPLAY_EPG_LATER
             MENUITEM SEPARATOR
-            MENUITEM "&Previous Page\tShift+Up",    IDM_DISPLAY_EPG_PREV
-            MENUITEM "&Next Page\tShift+Down",      IDM_DISPLAY_EPG_NEXT
+            MENUITEM "&Previous\tShift+Up",         IDM_DISPLAY_EPG_PREV_IN_PAGE
+
+            MENUITEM "&Next\tShift+Dn",             IDM_DISPLAY_EPG_NEXT_IN_PAGE
+
+            MENUITEM "&View Program Now\tShift+Enter", IDM_EPG_VIEW_PROG
+            MENUITEM SEPARATOR
+            MENUITEM "P&revious Page\tShift+PgUp",  IDM_DISPLAY_EPG_PREV
+            MENUITEM "Ne&xt Page\tShift+PgDn",      IDM_DISPLAY_EPG_NEXT
         END
     END
     POPUP "&Datacasting"
