--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -266,7 +266,7 @@ END
 IDD_CHANNELLIST DIALOGEX 22, 17, 357, 254
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     GROUPBOX        "Channel List",IDC_STATIC,5,0,115,228,BS_LEFT,
                     WS_EX_TRANSPARENT
@@ -1432,8 +1432,10 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "EPG"
         BEGIN
-            MENUITEM "&Import XMLTV File",          IDM_SCAN_EPG
-            MENUITEM "L&oad EPG Data",              IDM_LOAD_EPG
+            MENUITEM "&Import XMLTV File",          IDM_IMPORT_XMLTV
+            MENUITEM "&Import Nextview EPG database", IDM_IMPORT_NEXTVIEW
+            , GRAYED
+            MENUITEM "L&oad EPG Data",              IDM_LOAD_EPG, GRAYED
             MENUITEM SEPARATOR
             MENUITEM "View Programme &Details\tCtrl+Shift+G", 
                                                     IDM_DISPLAY_EPG
