Added some comments

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.5 2005-03-06 17:04:28 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.6 2005-05-12 19:06:59 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.5  2005/03/06 17:04:28  to_see
+; Added new Cards: GDI Black Gold, IODATA GV-VCP3/PCI, IODATA GV/BCTV7E
+;
 ; Revision 1.4  2005/03/06 13:15:06  to_see
 ; Added some tuner
 ;
@@ -158,6 +161,17 @@ Input ( "Composite Over S-Video", composite )
 
 
 [MSI TV@nywhere Master]
+;Comments:
+;Don't use DSaler 4.1.9. It corruptes your eeprom.
+;
+;If your eeprom is corrupted typical symthoms are that
+;your software that came with the card does not work
+;anymore after using DScaler 4.1.9. Then search for the
+;"Reflasher" app in Support Forum and reflash your eeprom.
+;
+;Please close your PVR and IR apps in system tray to
+;get audio before you start DScaler.
+
 ;Thanks Hans Schroeder
 ;Thanks Michal Pytasz
 ;Thanks Wesley Ward
@@ -226,6 +240,16 @@ Input ( "Composite Over S-Video", composite )
 
 
 [Hauppauge WinTV 34xxx models]
+;Comments:
+;Many cards with the same name but different hardware
+;(tuners, with/without IR remote...)
+;
+;If no tuner is autodetected, try all in the list
+;and post to support forum.
+;
+;Please close your PVR and IR apps in system tray to
+;get audio before you start DScaler.
+
 ;Thanks Tom Zoerner
 AutoDetectID = 0x34010070, 0x34000070
 DefaultTuner = auto
@@ -271,6 +295,12 @@ Input ( "PDI", ccir )
 
 
 [Leadtek WinFast TV2000 XP Expert (Pal)]
+;Comments:
+;Card variant with Pal-Tuner
+;
+;Please close your PVR and IR apps in system tray to
+;get audio before you start DScaler.
+
 ;Thanks Sorin Siron
 ;Thanks Daniel Wojcik
 ;Thanks Brian Bennefeld
@@ -303,6 +333,12 @@ UseTDA9887 ()
 
 
 [Leadtek WinFast TV2000 XP Expert (Ntsc)]
+;Comments:
+;Card variant with Ntsc-Tuner
+;
+;Please close your PVR and IR apps in system tray to
+;get audio before you start DScaler.
+
 ;Thanks Alan Erickson
 AutoDetectID = 0x6613107D
 DefaultTuner = philips_4in1
@@ -356,6 +392,10 @@ UseTDA9887 ()
 
 
 [PixelView PlayTV Ultra (Mono Tuner Sound)]
+;Comments:
+;Card variant with onboard TDA9874 audio decoder.
+;Only mono audio direct from tuner supported.
+
 ;Thanks Denis Love
 AutoDetectID = 0x48111554
 DefaultTuner = philips_pal
@@ -374,6 +414,13 @@ Input ( "S-Video", svideo )
 
 
 [PixelView PlayTV Ultra]
+;Comments:
+;Card variant without onboard TDA9874 audio decoder.
+;Stereo audio should be ok.
+;
+;Please close your PVR and IR apps in system tray to
+;get audio before you start DScaler.
+
 AutoDetectID = 0x48111554
 DefaultTuner = philips_pal
 
@@ -391,6 +438,11 @@ Input ( "S-Video", svideo )
 
 
 [K-World DV/AV Expert TV Stereo]
+;Comments:
+;The report I have is that this card does not have an
+;eeprom or it is corrupted from 4.1.9. But in driver .inf
+;file 2 SubID's are mentioned.
+
 ;Thanks Triantafillos Paradas
 AutoDetectID = 0x088217de, 0x088317de
 DefaultTuner = philips_fm1216me_mk3  ;not sure
