Minor changes in EPG menus

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -1430,12 +1430,12 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "&Reset Statistics",           IDM_RESET_STATS
         MENUITEM SEPARATOR
-        POPUP "EPG"
+        POPUP "Electronic Program Guide"
         BEGIN
             MENUITEM "&Import XMLTV File",          IDM_IMPORT_XMLTV
             MENUITEM "&Import NextviewEPG database", IDM_IMPORT_NEXTVIEW
             MENUITEM SEPARATOR
-            MENUITEM "View Programme &Details\tCtrl+Shift+G", 
+            MENUITEM "View Programme &Description\tCtrl+Shift+G", 
                                                     IDM_DISPLAY_EPG
             MENUITEM "&Browse Programmes\tG",       IDM_DISPLAY_EPG_NOW
             MENUITEM "Hide EPG\tBackspace",         IDM_HIDE_EPG
@@ -1452,7 +1452,7 @@ BEGIN
             MENUITEM "P&revious Page\tShift+PgUp",  IDM_DISPLAY_EPG_PREV
             MENUITEM "Ne&xt Page\tShift+PgDn",      IDM_DISPLAY_EPG_NEXT
             MENUITEM SEPARATOR
-            MENUITEM "&Go to Program\tShift+Enter", IDM_EPG_VIEW_PROG
+            MENUITEM "&Show Programme\tShift+Enter", IDM_EPG_VIEW_PROG
         END
     END
     POPUP "&Datacasting"
