Added new tuner

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.6 2005-05-12 19:06:59 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.7 2005-07-17 15:59:22 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.6  2005/05/12 19:06:59  to_see
+; Added some comments
+;
 ; Revision 1.5  2005/03/06 17:04:28  to_see
 ; Added new Cards: GDI Black Gold, IODATA GV-VCP3/PCI, IODATA GV/BCTV7E
 ;
@@ -538,7 +541,7 @@ Input ( "S-Video", svideo )
 UseTDA9887 ()
 
 
-; ***** Tuner list: (as at March 2005) *****
+; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
 ; setup                       -1
 ; absent                      0
@@ -598,6 +601,11 @@ UseTDA9887 ()
 ; philips_fm1256_ih3		  54
 ; philips_fq1286			  55
 ; lg_pal_tape				  56
-; philips_fm1216me			  57
+; philips_fq1216ame_mk4		  57
 ; philips_fq1236a_mk4		  58
+; tda8275                     59
+; ymec_tvf_8531mf             60
+; ymec_tvf_5533mf             61
+; tena_9533_di                62
+; philips_fmd1216me_mk3       63
 ;
