--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.14 2005-03-13 04:48:40 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.15 2005-07-17 15:59:22 to_see Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1328,7 +1328,7 @@ Final ()
 	GPIOSet( 0x042000, 0x1ce700 )
 
 
-; ***** Tuner list: (as at March 2005) *****
+; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
 ; setup                       -1
 ; absent                      0
@@ -1388,6 +1388,11 @@ Final ()
 ; philips_fm1256_ih3		  54
 ; philips_fq1286			  55
 ; lg_pal_tape				  56
-; philips_fm1216me			  57
+; philips_fq1216ame_mk4		  57
 ; philips_fq1236a_mk4		  58
+; tda8275                     59
+; ymec_tvf_8531mf             60
+; ymec_tvf_5533mf             61
+; tena_9533_di                62
+; philips_fmd1216me_mk3       63
 ;
